--- a/Front - Proyecto/src/output.css
+++ b/Front - Proyecto/src/output.css
@@ -584,16 +584,40 @@ video {
   top: 86px;
 }
 
-.bottom-2 {
-  bottom: 0.5rem;
+.top-1 {
+  top: 0.25rem;
 }
 
-.bottom-5 {
-  bottom: 1.25rem;
+.top-3 {
+  top: 0.75rem;
 }
 
-.bottom-10 {
-  bottom: 2.5rem;
+.top-10 {
+  top: 2.5rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.right-3 {
+  right: 0.75rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.right-1 {
+  right: 0.25rem;
 }
 
 .z-\[2\] {
@@ -604,49 +628,12 @@ video {
   float: right;
 }
 
-.mx-\[8\.7rem\] {
-  margin-left: 8.7rem;
-  margin-right: 8.7rem;
+.m-0 {
+  margin: 0px;
 }
 
-.mx-\[\] {
-  margin-left: ;
-  margin-right: ;
-}
-
-.mx-\[50\] {
-  margin-left: 50;
-  margin-right: 50;
-}
-
-.mx-\[50\%\] {
-  margin-left: 50%;
-  margin-right: 50%;
-}
-
-.mx-\[30\%\] {
-  margin-left: 30%;
-  margin-right: 30%;
-}
-
-.mx-\[25\%\] {
-  margin-left: 25%;
-  margin-right: 25%;
-}
-
-.mx-\[24\%\] {
-  margin-left: 24%;
-  margin-right: 24%;
-}
-
-.mx-\[23\%\] {
-  margin-left: 23%;
-  margin-right: 23%;
-}
-
-.mx-\[22\%\] {
-  margin-left: 22%;
-  margin-right: 22%;
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .mb-3 {
@@ -665,6 +652,10 @@ video {
   margin-left: 3rem;
 }
 
+.ml-16 {
+  margin-left: 4rem;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -673,20 +664,32 @@ video {
   margin-left: 1rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
+.ml-7 {
+  margin-left: 1.75rem;
 }
 
 .ml-8 {
   margin-left: 2rem;
 }
 
-.ml-\[16rem\] {
-  margin-left: 16rem;
+.ml-9 {
+  margin-left: 2.25rem;
+}
+
+.ml-\[17rem\] {
+  margin-left: 17rem;
 }
 
 .ml-\[2px\] {
   margin-left: 2px;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
 .mt-2 {
@@ -705,60 +708,124 @@ video {
   margin-top: 1.75rem;
 }
 
-.mt-\[19rem\] {
-  margin-top: 19rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[2px\] {
+  margin-top: 2px;
+}
+
+.mb-\[\] {
+  margin-bottom: ;
+}
+
+.mb-\[2px\] {
+  margin-bottom: 2px;
+}
+
+.mb-\[3px\] {
+  margin-bottom: 3px;
+}
+
+.mb-\[4px\] {
+  margin-bottom: 4px;
+}
+
+.mb-\[1px\] {
+  margin-bottom: 1px;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
 }
 
 .ml-10 {
   margin-left: 2.5rem;
 }
 
-.mr-5 {
-  margin-right: 1.25rem;
+.mr-10 {
+  margin-right: 2.5rem;
 }
 
-.ml-16 {
-  margin-left: 4rem;
+.mt-28 {
+  margin-top: 7rem;
 }
 
-.ml-6 {
-  margin-left: 1.5rem;
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mr-0 {
+  margin-right: 0px;
 }
 
 .ml-3 {
   margin-left: 0.75rem;
 }
 
-.ml-14 {
-  margin-left: 3.5rem;
+.ml-\[5\%\] {
+  margin-left: 5%;
 }
 
-.ml-9 {
-  margin-left: 2.25rem;
+.ml-\[12rem\] {
+  margin-left: 12rem;
 }
 
-.ml-7 {
-  margin-left: 1.75rem;
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
-.ml-0 {
-  margin-left: 0px;
+.ml-\[17px\] {
+  margin-left: 17px;
+}
+
+.ml-\[16px\] {
+  margin-left: 16px;
+}
+
+.ml-\[15px\] {
+  margin-left: 15px;
+}
+
+.ml-\[14px\] {
+  margin-left: 14px;
+}
+
+.ml-\[14\.5px\] {
+  margin-left: 14.5px;
 }
 
 .ml-1 {
   margin-left: 0.25rem;
-}
-
-.ml-\[176rem\] {
-  margin-left: 176rem;
-}
-
-.ml-\[17rem\] {
-  margin-left: 17rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
 }
 
 .box-border {
@@ -785,14 +852,6 @@ video {
   display: none;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
 .h-5 {
   height: 1.25rem;
 }
@@ -805,16 +864,20 @@ video {
   height: 2rem;
 }
 
-.h-\[200px\] {
-  height: 200px;
+.h-\[10px\] {
+  height: 10px;
 }
 
-.h-\[250px\] {
-  height: 250px;
+.h-\[300px\] {
+  height: 300px;
 }
 
 .h-\[350px\] {
   height: 350px;
+}
+
+.h-\[380px\] {
+  height: 380px;
 }
 
 .h-\[60px\] {
@@ -833,52 +896,60 @@ video {
   height: 1.75rem;
 }
 
-.h-\[300px\] {
-  height: 300px;
+.h-52 {
+  height: 13rem;
 }
 
-.h-\[360px\] {
-  height: 360px;
-}
-
-.h-\[365px\] {
-  height: 365px;
-}
-
-.h-\[370px\] {
-  height: 370px;
-}
-
-.h-\[380px\] {
-  height: 380px;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-1 {
-  height: 0.25rem;
+.h-72 {
+  height: 18rem;
 }
 
 .h-2 {
   height: 0.5rem;
 }
 
-.h-\[10px\] {
-  height: 10px;
+.h-\[\] {
+  height: ;
+}
+
+.h-\[300rem\] {
+  height: 300rem;
+}
+
+.h-\[3\] {
+  height: 3;
+}
+
+.h-\[360px\] {
+  height: 360px;
+}
+
+.h-\[370px\] {
+  height: 370px;
+}
+
+.h-\[390px\] {
+  height: 390px;
+}
+
+.h-\[30px\] {
+  height: 30px;
+}
+
+.max-h-\[370px\] {
+  max-height: 370px;
 }
 
 .min-h-screen {
   min-height: 100vh;
 }
 
-.w-12 {
-  width: 3rem;
+.min-h-\[\] {
+  min-height: ;
+}
+
+.min-h-\[72\] {
+  min-height: 72;
 }
 
 .w-48 {
@@ -887,6 +958,14 @@ video {
 
 .w-5\/6 {
   width: 83.333333%;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-64 {
@@ -909,32 +988,104 @@ video {
   width: 100%;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
 .w-7 {
   width: 1.75rem;
 }
 
-.w-6 {
-  width: 1.5rem;
+.w-72 {
+  width: 18rem;
 }
 
 .w-\[\] {
   width: ;
 }
 
-.w-\[15\.5rem\] {
-  width: 15.5rem;
+.w-\[390px\] {
+  width: 390px;
 }
 
-.w-56 {
-  width: 14rem;
+.w-\[490px\] {
+  width: 490px;
 }
 
-.w-52 {
-  width: 13rem;
+.w-screen {
+  width: 100vw;
+}
+
+.w-\[40\] {
+  width: 40;
+}
+
+.w-\[40rem\] {
+  width: 40rem;
+}
+
+.w-\[5\] {
+  width: 5;
+}
+
+.w-\[50rem\] {
+  width: 50rem;
+}
+
+.w-\[55rem\] {
+  width: 55rem;
+}
+
+.w-\[60rem\] {
+  width: 60rem;
+}
+
+.w-\[64rem\] {
+  width: 64rem;
+}
+
+.w-\[64\] {
+  width: 64;
+}
+
+.w-\[100vh\] {
+  width: 100vh;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[44rem\] {
+  width: 44rem;
+}
+
+.min-w-\[\] {
+  min-width: ;
+}
+
+.min-w-\[72\] {
+  min-width: 72;
+}
+
+.min-w-full {
+  min-width: 100%;
+}
+
+.min-w-\[50rem\] {
+  min-width: 50rem;
+}
+
+.min-w-\[60rem\] {
+  min-width: 60rem;
+}
+
+.max-w-\[490px\] {
+  max-width: 490px;
+}
+
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[60rem\] {
+  max-width: 60rem;
 }
 
 .cursor-pointer {
@@ -953,20 +1104,16 @@ video {
   align-items: center;
 }
 
-.justify-normal {
-  justify-content: normal;
-}
-
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-center {
   justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .overflow-hidden {
@@ -989,16 +1136,20 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-t-xl {
@@ -1053,19 +1204,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500 {
+.bg-gray-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1089,16 +1235,12 @@ video {
   padding: 0.5;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
-}
-
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-0 {
+  padding: 0px;
 }
 
 .px-4 {
@@ -1111,20 +1253,22 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
 
-.font-sans {
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
-
-.font-mono {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-2xl {
@@ -1137,13 +1281,12 @@ video {
   line-height: 2.25rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-\[15px\] {
+  font-size: 15px;
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -1152,18 +1295,56 @@ video {
   line-height: 1.25rem;
 }
 
+.text-\[12px\] {
+  font-size: 12px;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[11px\] {
+  font-size: 11px;
+}
+
+.text-\[10\.5px\] {
+  font-size: 10.5px;
+}
+
+.text-\[1px\] {
+  font-size: 1px;
+}
+
+.text-\[10\.8px\] {
+  font-size: 10.8px;
+}
+
+.text-\[10\.9px\] {
+  font-size: 10.9px;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
+.text-\[\#241111\] {
+  --tw-text-opacity: 1;
+  color: rgb(36 17 17 / var(--tw-text-opacity));
+}
+
 .text-\[\#FFFFFF\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-slate-500 {
@@ -1178,28 +1359,6 @@ video {
 
 .text-\[\] {
   color: ;
-}
-
-.text-\[241111\] {
-  color: 241111;
-}
-
-.text-\[\#241111\] {
-  --tw-text-opacity: 1;
-  color: rgb(36 17 17 / var(--tw-text-opacity));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.no-underline {
-  text-decoration-line: none;
-}
-
-.opacity-\[1\] {
-  opacity: 1;
 }
 
 .transition {
@@ -1268,12 +1427,152 @@ video {
     height: 2.5rem;
   }
 
+  .lg\:max-h-\[370px\] {
+    max-height: 370px;
+  }
+
+  .lg\:min-h-\[72\] {
+    min-height: 72;
+  }
+
   .lg\:w-\[29rem\] {
     width: 29rem;
   }
 
   .lg\:w-\[32rem\] {
     width: 32rem;
+  }
+
+  .lg\:w-\[30rem\] {
+    width: 30rem;
+  }
+
+  .lg\:w-\[28rem\] {
+    width: 28rem;
+  }
+
+  .lg\:w-\[40rem\] {
+    width: 40rem;
+  }
+
+  .lg\:min-w-\[72\] {
+    min-width: 72;
+  }
+
+  .lg\:min-w-\[40rem\] {
+    min-width: 40rem;
+  }
+
+  .lg\:min-w-\[30rem\] {
+    min-width: 30rem;
+  }
+
+  .lg\:min-w-\[20rem\] {
+    min-width: 20rem;
+  }
+
+  .lg\:max-w-\[490px\] {
+    max-width: 490px;
+  }
+
+  .lg\:max-w-\[420px\] {
+    max-width: 420px;
+  }
+
+  .lg\:max-w-\[40px\] {
+    max-width: 40px;
+  }
+
+  .lg\:max-w-\[240px\] {
+    max-width: 240px;
+  }
+
+  .lg\:max-w-\[340px\] {
+    max-width: 340px;
+  }
+
+  .lg\:max-w-\[350px\] {
+    max-width: 350px;
+  }
+
+  .lg\:max-w-\[360px\] {
+    max-width: 360px;
+  }
+
+  .lg\:max-w-\[380px\] {
+    max-width: 380px;
+  }
+
+  .lg\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+
+  .lg\:max-w-\[40rem\] {
+    max-width: 40rem;
+  }
+
+  .lg\:max-w-\[45rem\] {
+    max-width: 45rem;
+  }
+
+  .lg\:max-w-\[4rem\] {
+    max-width: 4rem;
+  }
+
+  .lg\:max-w-\[\] {
+    max-width: ;
+  }
+
+  .lg\:max-w-\[4\] {
+    max-width: 4;
+  }
+
+  .lg\:max-w-\[42rem\] {
+    max-width: 42rem;
+  }
+
+  .lg\:max-w-\[41rem\] {
+    max-width: 41rem;
+  }
+
+  .lg\:max-w-\[35rem\] {
+    max-width: 35rem;
+  }
+
+  .lg\:max-w-\[30rem\] {
+    max-width: 30rem;
+  }
+
+  .lg\:max-w-\[25rem\] {
+    max-width: 25rem;
+  }
+
+  .lg\:max-w-\[rem\] {
+    max-width: rem;
+  }
+
+  .lg\:max-w-\[23rem\] {
+    max-width: 23rem;
+  }
+
+  .lg\:max-w-\[27rem\] {
+    max-width: 27rem;
+  }
+
+  .lg\:max-w-\[20rem\] {
+    max-width: 20rem;
+  }
+
+  .lg\:max-w-\[38rem\] {
+    max-width: 38rem;
+  }
+
+  .lg\:max-w-\[36rem\] {
+    max-width: 36rem;
+  }
+
+  .lg\:max-w-\[28rem\] {
+    max-width: 28rem;
   }
 
   .lg\:p-2 {
@@ -1302,12 +1601,378 @@ video {
     height: 2.5rem;
   }
 
+  .xl\:max-h-\[370px\] {
+    max-height: 370px;
+  }
+
+  .xl\:min-h-\[72\] {
+    min-height: 72;
+  }
+
   .xl\:w-\[32rem\] {
     width: 32rem;
   }
 
   .xl\:w-\[54rem\] {
     width: 54rem;
+  }
+
+  .xl\:w-\[56rem\] {
+    width: 56rem;
+  }
+
+  .xl\:w-\[40rem\] {
+    width: 40rem;
+  }
+
+  .xl\:w-\[50rem\] {
+    width: 50rem;
+  }
+
+  .xl\:w-\[60rem\] {
+    width: 60rem;
+  }
+
+  .xl\:min-w-\[72\] {
+    min-width: 72;
+  }
+
+  .xl\:min-w-\[54rem\] {
+    min-width: 54rem;
+  }
+
+  .xl\:min-w-\[50rem\] {
+    min-width: 50rem;
+  }
+
+  .xl\:min-w-\[45rem\] {
+    min-width: 45rem;
+  }
+
+  .xl\:min-w-\[4rem\] {
+    min-width: 4rem;
+  }
+
+  .xl\:min-w-\[40rem\] {
+    min-width: 40rem;
+  }
+
+  .xl\:min-w-\[41rem\] {
+    min-width: 41rem;
+  }
+
+  .xl\:min-w-\[42rem\] {
+    min-width: 42rem;
+  }
+
+  .xl\:min-w-\[55rem\] {
+    min-width: 55rem;
+  }
+
+  .xl\:min-w-\[rem\] {
+    min-width: rem;
+  }
+
+  .xl\:min-w-\[30rem\] {
+    min-width: 30rem;
+  }
+
+  .xl\:min-w-\[51rem\] {
+    min-width: 51rem;
+  }
+
+  .xl\:min-w-\[52rem\] {
+    min-width: 52rem;
+  }
+
+  .xl\:min-w-\[53rem\] {
+    min-width: 53rem;
+  }
+
+  .xl\:min-w-\[\] {
+    min-width: ;
+  }
+
+  .xl\:min-w-\[51\] {
+    min-width: 51;
+  }
+
+  .xl\:min-w-\[50\] {
+    min-width: 50;
+  }
+
+  .xl\:min-w-\[4\] {
+    min-width: 4;
+  }
+
+  .xl\:min-w-\[31rem\] {
+    min-width: 31rem;
+  }
+
+  .xl\:min-w-\[39rem\] {
+    min-width: 39rem;
+  }
+
+  .xl\:min-w-\[35rem\] {
+    min-width: 35rem;
+  }
+
+  .xl\:min-w-\[5rem\] {
+    min-width: 5rem;
+  }
+
+  .xl\:min-w-\[1280px\] {
+    min-width: 1280px;
+  }
+
+  .xl\:min-w-\[100\%\] {
+    min-width: 100%;
+  }
+
+  .xl\:min-w-\[100vh\] {
+    min-width: 100vh;
+  }
+
+  .xl\:min-w-\[150vh\] {
+    min-width: 150vh;
+  }
+
+  .xl\:min-w-\[140vh\] {
+    min-width: 140vh;
+  }
+
+  .xl\:min-w-\[1200px\] {
+    min-width: 1200px;
+  }
+
+  .xl\:min-w-\[411200px\] {
+    min-width: 411200px;
+  }
+
+  .xl\:min-w-5 {
+    min-width: 1.25rem;
+  }
+
+  .xl\:min-w-52 {
+    min-width: 13rem;
+  }
+
+  .xl\:min-w-56 {
+    min-width: 14rem;
+  }
+
+  .xl\:min-w-4 {
+    min-width: 1rem;
+  }
+
+  .xl\:min-w-40 {
+    min-width: 10rem;
+  }
+
+  .xl\:min-w-96 {
+    min-width: 24rem;
+  }
+
+  .xl\:min-w-full {
+    min-width: 100%;
+  }
+
+  .xl\:min-w-2 {
+    min-width: 0.5rem;
+  }
+
+  .xl\:min-w-2\.5 {
+    min-width: 0.625rem;
+  }
+
+  .xl\:min-w-fit {
+    min-width: -moz-fit-content;
+    min-width: fit-content;
+  }
+
+  .xl\:min-w-min {
+    min-width: -moz-min-content;
+    min-width: min-content;
+  }
+
+  .xl\:min-w-max {
+    min-width: -moz-max-content;
+    min-width: max-content;
+  }
+
+  .xl\:min-w-\[200\] {
+    min-width: 200;
+  }
+
+  .xl\:min-w-\[200\%\] {
+    min-width: 200%;
+  }
+
+  .xl\:min-w-\[80\%\] {
+    min-width: 80%;
+  }
+
+  .xl\:min-w-\[60\%\] {
+    min-width: 60%;
+  }
+
+  .xl\:min-w-\[50\%\] {
+    min-width: 50%;
+  }
+
+  .xl\:min-w-\[54\%\] {
+    min-width: 54%;
+  }
+
+  .xl\:min-w-\[55\%\] {
+    min-width: 55%;
+  }
+
+  .xl\:min-w-\[58\%\] {
+    min-width: 58%;
+  }
+
+  .xl\:min-w-\[58\] {
+    min-width: 58;
+  }
+
+  .xl\:min-w-\[59\%\] {
+    min-width: 59%;
+  }
+
+  .xl\:min-w-\[64\%\] {
+    min-width: 64%;
+  }
+
+  .xl\:max-w-\[490px\] {
+    max-width: 490px;
+  }
+
+  .xl\:max-w-\[41rem\] {
+    max-width: 41rem;
+  }
+
+  .xl\:max-w-\[45rem\] {
+    max-width: 45rem;
+  }
+
+  .xl\:max-w-\[50rem\] {
+    max-width: 50rem;
+  }
+
+  .xl\:max-w-\[55rem\] {
+    max-width: 55rem;
+  }
+
+  .xl\:max-w-\[5rem\] {
+    max-width: 5rem;
+  }
+
+  .xl\:max-w-\[48rem\] {
+    max-width: 48rem;
+  }
+
+  .xl\:max-w-\[rem\] {
+    max-width: rem;
+  }
+
+  .xl\:max-w-\[60rem\] {
+    max-width: 60rem;
+  }
+
+  .xl\:max-w-\[65rem\] {
+    max-width: 65rem;
+  }
+
+  .xl\:max-w-\[54rem\] {
+    max-width: 54rem;
+  }
+
+  .xl\:max-w-\[61rem\] {
+    max-width: 61rem;
+  }
+
+  .xl\:max-w-\[40rem\] {
+    max-width: 40rem;
+  }
+
+  .xl\:max-w-\[64rem\] {
+    max-width: 64rem;
+  }
+
+  .xl\:max-w-\[66rem\] {
+    max-width: 66rem;
+  }
+
+  .xl\:max-w-\[100rem\] {
+    max-width: 100rem;
+  }
+
+  .xl\:max-w-\[1920px\] {
+    max-width: 1920px;
+  }
+
+  .xl\:max-w-\[100\%\] {
+    max-width: 100%;
+  }
+
+  .xl\:max-w-\[100vh\] {
+    max-width: 100vh;
+  }
+
+  .xl\:max-w-\[150vh\] {
+    max-width: 150vh;
+  }
+
+  .xl\:max-w-\[170vh\] {
+    max-width: 170vh;
+  }
+
+  .xl\:max-w-\[140vh\] {
+    max-width: 140vh;
+  }
+
+  .xl\:max-w-\[\] {
+    max-width: ;
+  }
+
+  .xl\:max-w-6 {
+    max-width: 1.5rem;
+  }
+
+  .xl\:max-w-60 {
+    max-width: 15rem;
+  }
+
+  .xl\:max-w-\[1920\] {
+    max-width: 1920;
+  }
+
+  .xl\:max-w-min {
+    max-width: -moz-min-content;
+    max-width: min-content;
+  }
+
+  .xl\:max-w-max {
+    max-width: -moz-max-content;
+    max-width: max-content;
+  }
+
+  .xl\:max-w-fit {
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+  }
+
+  .xl\:max-w-\[2400px\] {
+    max-width: 2400px;
+  }
+
+  .xl\:max-w-\[full\] {
+    max-width: full;
+  }
+
+  .xl\:max-w-full {
+    max-width: 100%;
   }
 
   .xl\:p-2 {
@@ -1322,5 +1987,57 @@ video {
 
   .\32xl\:block {
     display: block;
+  }
+
+  .\32xl\:min-w-\[\] {
+    min-width: ;
+  }
+
+  .\32xl\:min-w-\[5\] {
+    min-width: 5;
+  }
+
+  .\32xl\:min-w-\[50rem\] {
+    min-width: 50rem;
+  }
+
+  .\32xl\:min-w-\[55rem\] {
+    min-width: 55rem;
+  }
+
+  .\32xl\:min-w-\[62\] {
+    min-width: 62;
+  }
+
+  .\32xl\:min-w-\[1920px\] {
+    min-width: 1920px;
+  }
+
+  .\32xl\:max-w-\[55rem\] {
+    max-width: 55rem;
+  }
+
+  .\32xl\:max-w-\[60rem\] {
+    max-width: 60rem;
+  }
+
+  .\32xl\:max-w-\[65rem\] {
+    max-width: 65rem;
+  }
+
+  .\32xl\:max-w-\[\] {
+    max-width: ;
+  }
+
+  .\32xl\:max-w-\[2\] {
+    max-width: 2;
+  }
+
+  .\32xl\:max-w-\[2400px\] {
+    max-width: 2400px;
+  }
+
+  .\32xl\:max-w-\[2400\] {
+    max-width: 2400;
   }
 }
