--- a/Front - Proyecto/src/Usuario/output.css
+++ b/Front - Proyecto/src/Usuario/output.css
@@ -564,12 +564,20 @@ video {
   left: 2.5rem;
 }
 
+.left-16 {
+  left: 4rem;
+}
+
 .left-5 {
   left: 1.25rem;
 }
 
 .right-0 {
   right: 0px;
+}
+
+.right-36 {
+  right: 9rem;
 }
 
 .top-12 {
@@ -616,28 +624,8 @@ video {
   top: 4rem;
 }
 
-.right-10 {
-  right: 2.5rem;
-}
-
-.right-16 {
-  right: 4rem;
-}
-
-.right-32 {
-  right: 8rem;
-}
-
-.left-16 {
-  left: 4rem;
-}
-
-.left-20 {
-  left: 5rem;
-}
-
-.right-36 {
-  right: 9rem;
+.top-40 {
+  top: 10rem;
 }
 
 .z-\[1\] {
@@ -646,6 +634,10 @@ video {
 
 .z-\[2\] {
   z-index: 2;
+}
+
+.-z-0 {
+  z-index: 0;
 }
 
 .float-right {
@@ -736,6 +728,10 @@ video {
   margin-right: 2.5rem;
 }
 
+.mr-16 {
+  margin-right: 4rem;
+}
+
 .mr-4 {
   margin-right: 1rem;
 }
@@ -804,8 +800,28 @@ video {
   margin-top: 9.6rem;
 }
 
-.mr-40 {
-  margin-right: 10rem;
+.ml-32 {
+  margin-left: 8rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.ml-0 {
+  margin-left: 0px;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .box-border {
@@ -888,6 +904,18 @@ video {
   height: 100vh;
 }
 
+.h-\[120px\] {
+  height: 120px;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[20px\] {
+  height: 20px;
+}
+
 .max-h-\[220px\] {
   max-height: 220px;
 }
@@ -916,6 +944,10 @@ video {
   width: 15.9rem;
 }
 
+.w-\[16rem\] {
+  width: 16rem;
+}
+
 .w-\[350px\] {
   width: 350px;
 }
@@ -936,8 +968,32 @@ video {
   width: 100vw;
 }
 
-.w-\[16rem\] {
-  width: 16rem;
+.w-\[20rem\] {
+  width: 20rem;
+}
+
+.w-\[25rem\] {
+  width: 25rem;
+}
+
+.w-\[22rem\] {
+  width: 22rem;
+}
+
+.w-\[349px\] {
+  width: 349px;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
+.w-\[20px\] {
+  width: 20px;
+}
+
+.w-\[2rem\] {
+  width: 2rem;
 }
 
 .min-w-full {
@@ -976,10 +1032,6 @@ video {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1011,6 +1063,11 @@ video {
 .rounded-t-xl {
   border-top-left-radius: 0.75rem;
   border-top-right-radius: 0.75rem;
+}
+
+.rounded-r-\[50px\] {
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
 }
 
 .border-2 {
@@ -1070,6 +1127,36 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#2c28286c\] {
+  background-color: #2c28286c;
+}
+
+.bg-\[\#1d1717\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 23 23 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#2821211d\] {
+  background-color: #2821211d;
+}
+
+.bg-\[\#302d2d00\] {
+  background-color: #302d2d00;
+}
+
+.bg-\[\#524848\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 72 72 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#6059595a\] {
+  background-color: #6059595a;
+}
+
+.bg-\[\#9a93935a\] {
+  background-color: #9a93935a;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1095,6 +1182,10 @@ video {
   padding: 0.5;
 }
 
+.p-0 {
+  padding: 0px;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1105,8 +1196,21 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-2xl {
@@ -1146,6 +1250,11 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -1190,6 +1299,16 @@ video {
 .hover\:bg-\[\#ffffff\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#276B58\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 107 88 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#4f9581\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 149 129 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#276B58\]:hover {
@@ -1395,8 +1514,28 @@ video {
     margin-top: 4px;
   }
 
-  .lg\:ml-\[10rem\] {
-    margin-left: 10rem;
+  .lg\:-mt-5 {
+    margin-top: -1.25rem;
+  }
+
+  .lg\:-mt-10 {
+    margin-top: -2.5rem;
+  }
+
+  .lg\:-mt-1 {
+    margin-top: -0.25rem;
+  }
+
+  .lg\:-mt-12 {
+    margin-top: -3rem;
+  }
+
+  .lg\:-mt-14 {
+    margin-top: -3.5rem;
+  }
+
+  .lg\:-mt-16 {
+    margin-top: -4rem;
   }
 
   .lg\:block {
@@ -1483,6 +1622,11 @@ video {
   .lg\:text-\[12px\] {
     font-size: 12px;
   }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -1526,8 +1670,24 @@ video {
     margin-top: 2.25rem;
   }
 
-  .xl\:ml-\[24rem\] {
-    margin-left: 24rem;
+  .xl\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .xl\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .xl\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .xl\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .xl\:mt-4 {
+    margin-top: 1rem;
   }
 
   .xl\:block {
@@ -1552,6 +1712,30 @@ video {
 
   .xl\:h-\[380px\] {
     height: 380px;
+  }
+
+  .xl\:h-\[200px\] {
+    height: 200px;
+  }
+
+  .xl\:h-\[100px\] {
+    height: 100px;
+  }
+
+  .xl\:h-\[150px\] {
+    height: 150px;
+  }
+
+  .xl\:h-\[160px\] {
+    height: 160px;
+  }
+
+  .xl\:h-\[0px\] {
+    height: 0px;
+  }
+
+  .xl\:h-\[170px\] {
+    height: 170px;
   }
 
   .xl\:max-h-\[330px\] {
@@ -1608,6 +1792,10 @@ video {
 
   .xl\:p-2 {
     padding: 0.5rem;
+  }
+
+  .xl\:p-4 {
+    padding: 1rem;
   }
 
   .xl\:text-\[14px\] {
