--- a/Front - Proyecto/src/Administrativo/output.css
+++ b/Front - Proyecto/src/Administrativo/output.css
@@ -596,6 +596,10 @@ video {
   top: 9rem;
 }
 
+.top-40 {
+  top: 10rem;
+}
+
 .top-\[108px\] {
   top: 108px;
 }
@@ -624,20 +628,12 @@ video {
   top: 4rem;
 }
 
-.top-40 {
-  top: 10rem;
-}
-
 .z-\[1\] {
   z-index: 1;
 }
 
 .z-\[2\] {
   z-index: 2;
-}
-
-.-z-0 {
-  z-index: 0;
 }
 
 .float-right {
@@ -656,6 +652,10 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -666,6 +666,10 @@ video {
 
 .mb-\[10px\] {
   margin-bottom: 10px;
+}
+
+.ml-0 {
+  margin-left: 0px;
 }
 
 .ml-10 {
@@ -686,6 +690,10 @@ video {
 
 .ml-3 {
   margin-left: 0.75rem;
+}
+
+.ml-32 {
+  margin-left: 8rem;
 }
 
 .ml-4 {
@@ -728,8 +736,12 @@ video {
   margin-right: 2.5rem;
 }
 
-.mr-16 {
-  margin-right: 4rem;
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .mr-4 {
@@ -738,6 +750,10 @@ video {
 
 .mr-5 {
   margin-right: 1.25rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
 }
 
 .mt-0 {
@@ -800,30 +816,6 @@ video {
   margin-top: 9.6rem;
 }
 
-.ml-32 {
-  margin-left: 8rem;
-}
-
-.mr-8 {
-  margin-right: 2rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
-.ml-0 {
-  margin-left: 0px;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
 .box-border {
   box-sizing: border-box;
 }
@@ -840,12 +832,20 @@ video {
   display: flex;
 }
 
+.table {
+  display: table;
+}
+
 .grid {
   display: grid;
 }
 
 .hidden {
   display: none;
+}
+
+.h-28 {
+  height: 7rem;
 }
 
 .h-5 {
@@ -868,8 +868,16 @@ video {
   height: 10px;
 }
 
+.h-\[120px\] {
+  height: 120px;
+}
+
 .h-\[2\.5rem\] {
   height: 2.5rem;
+}
+
+.h-\[20px\] {
+  height: 20px;
 }
 
 .h-\[220px\] {
@@ -904,20 +912,12 @@ video {
   height: 100vh;
 }
 
-.h-\[120px\] {
-  height: 120px;
-}
-
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[20px\] {
-  height: 20px;
-}
-
 .max-h-\[220px\] {
   max-height: 220px;
+}
+
+.min-h-\[36rem\] {
+  min-height: 36rem;
 }
 
 .w-48 {
@@ -932,6 +932,10 @@ video {
   width: 1.5rem;
 }
 
+.w-60 {
+  width: 15rem;
+}
+
 .w-64 {
   width: 16rem;
 }
@@ -940,12 +944,20 @@ video {
   width: 10rem;
 }
 
+.w-\[13rem\] {
+  width: 13rem;
+}
+
 .w-\[15\.9rem\] {
   width: 15.9rem;
 }
 
-.w-\[16rem\] {
-  width: 16rem;
+.w-\[20px\] {
+  width: 20px;
+}
+
+.w-\[348px\] {
+  width: 348px;
 }
 
 .w-\[350px\] {
@@ -956,8 +968,16 @@ video {
   width: 42px;
 }
 
+.w-\[50\%\] {
+  width: 50%;
+}
+
 .w-\[8rem\] {
   width: 8rem;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-full {
@@ -968,40 +988,16 @@ video {
   width: 100vw;
 }
 
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[25rem\] {
-  width: 25rem;
-}
-
-.w-\[22rem\] {
-  width: 22rem;
-}
-
-.w-\[349px\] {
-  width: 349px;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-\[20px\] {
-  width: 20px;
-}
-
-.w-\[2rem\] {
-  width: 2rem;
-}
-
 .min-w-full {
   min-width: 100%;
 }
 
 .max-w-\[280px\] {
   max-width: 280px;
+}
+
+.max-w-\[40rem\] {
+  max-width: 40rem;
 }
 
 .cursor-pointer {
@@ -1036,6 +1032,14 @@ video {
   overflow: hidden;
 }
 
+.text-balance {
+  text-wrap: balance;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-\[10px\] {
   border-radius: 10px;
 }
@@ -1065,9 +1069,8 @@ video {
   border-top-right-radius: 0.75rem;
 }
 
-.rounded-r-\[50px\] {
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
+.border {
+  border-width: 1px;
 }
 
 .border-2 {
@@ -1076,6 +1079,11 @@ video {
 
 .border-\[1\.5px\] {
   border-width: 1.5px;
+}
+
+.border-y-2 {
+  border-top-width: 2px;
+  border-bottom-width: 2px;
 }
 
 .border-none {
@@ -1127,36 +1135,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#2c28286c\] {
-  background-color: #2c28286c;
-}
-
-.bg-\[\#1d1717\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 23 23 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#2821211d\] {
-  background-color: #2821211d;
-}
-
-.bg-\[\#302d2d00\] {
-  background-color: #302d2d00;
-}
-
-.bg-\[\#524848\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 72 72 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#6059595a\] {
-  background-color: #6059595a;
-}
-
-.bg-\[\#9a93935a\] {
-  background-color: #9a93935a;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1182,10 +1160,6 @@ video {
   padding: 0.5;
 }
 
-.p-0 {
-  padding: 0px;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1196,9 +1170,8 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.px-3 {
+.pl-3 {
   padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .text-center {
@@ -1207,10 +1180,6 @@ video {
 
 .text-justify {
   text-align: justify;
-}
-
-.align-middle {
-  vertical-align: middle;
 }
 
 .text-2xl {
@@ -1252,13 +1221,12 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-\[\#241111\] {
@@ -1286,9 +1254,25 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:bg-\[\#2e5c5c\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 92 92 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#47917c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(71 145 124 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#7EBBAA\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 187 170 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#D7EFFF\]:hover {
@@ -1296,19 +1280,14 @@ video {
   background-color: rgb(215 239 255 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#F0F9FF\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#ffffff\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#276B58\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 107 88 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#4f9581\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(79 149 129 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#276B58\]:hover {
@@ -1328,6 +1307,11 @@ video {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.active\:bg-\[\#4b927e\]:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 146 126 / var(--tw-bg-opacity));
 }
 
 @media (min-width: 640px) {
@@ -1363,6 +1347,10 @@ video {
 
   .md\:ml-8 {
     margin-left: 2rem;
+  }
+
+  .md\:ml-\[20rem\] {
+    margin-left: 20rem;
   }
 
   .md\:ml-\[21rem\] {
@@ -1470,6 +1458,10 @@ video {
     top: 86px;
   }
 
+  .lg\:-mt-16 {
+    margin-top: -4rem;
+  }
+
   .lg\:-mt-6 {
     margin-top: -1.5rem;
   }
@@ -1514,30 +1506,6 @@ video {
     margin-top: 4px;
   }
 
-  .lg\:-mt-5 {
-    margin-top: -1.25rem;
-  }
-
-  .lg\:-mt-10 {
-    margin-top: -2.5rem;
-  }
-
-  .lg\:-mt-1 {
-    margin-top: -0.25rem;
-  }
-
-  .lg\:-mt-12 {
-    margin-top: -3rem;
-  }
-
-  .lg\:-mt-14 {
-    margin-top: -3.5rem;
-  }
-
-  .lg\:-mt-16 {
-    margin-top: -4rem;
-  }
-
   .lg\:block {
     display: block;
   }
@@ -1574,6 +1542,10 @@ video {
     width: 30rem;
   }
 
+  .lg\:w-\[32rem\] {
+    width: 32rem;
+  }
+
   .lg\:w-\[350px\] {
     width: 350px;
   }
@@ -1584,6 +1556,10 @@ video {
 
   .lg\:w-\[64px\] {
     width: 64px;
+  }
+
+  .lg\:w-\[90\%\] {
+    width: 90%;
   }
 
   .lg\:min-w-\[20rem\] {
@@ -1622,11 +1598,6 @@ video {
   .lg\:text-\[12px\] {
     font-size: 12px;
   }
-
-  .lg\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
 }
 
 @media (min-width: 1280px) {
@@ -1640,6 +1611,10 @@ video {
 
   .xl\:ml-\[24px\] {
     margin-left: 24px;
+  }
+
+  .xl\:ml-\[30rem\] {
+    margin-left: 30rem;
   }
 
   .xl\:ml-\[31rem\] {
@@ -1666,28 +1641,12 @@ video {
     margin-top: 3.5rem;
   }
 
-  .xl\:mt-9 {
-    margin-top: 2.25rem;
-  }
-
-  .xl\:mt-1 {
-    margin-top: 0.25rem;
-  }
-
-  .xl\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .xl\:mt-6 {
-    margin-top: 1.5rem;
-  }
-
-  .xl\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
   .xl\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .xl\:mt-9 {
+    margin-top: 2.25rem;
   }
 
   .xl\:block {
@@ -1706,36 +1665,16 @@ video {
     height: 1.5rem;
   }
 
+  .xl\:h-\[170px\] {
+    height: 170px;
+  }
+
   .xl\:h-\[300px\] {
     height: 300px;
   }
 
   .xl\:h-\[380px\] {
     height: 380px;
-  }
-
-  .xl\:h-\[200px\] {
-    height: 200px;
-  }
-
-  .xl\:h-\[100px\] {
-    height: 100px;
-  }
-
-  .xl\:h-\[150px\] {
-    height: 150px;
-  }
-
-  .xl\:h-\[160px\] {
-    height: 160px;
-  }
-
-  .xl\:h-\[0px\] {
-    height: 0px;
-  }
-
-  .xl\:h-\[170px\] {
-    height: 170px;
   }
 
   .xl\:max-h-\[330px\] {
